# agent_fhir_api

./: .gitignore  LICENSE.md  README.md  api.py  example_samconfig.toml  index.py  pagination.py  pyproject.toml  samconfig.toml  template.yaml  util.py
.github/workflows/: lint.yaml  tests.yaml
api_src/: lambda_fn.py  query.py  requirements.txt  s3_utils.py  test_lambda_fn.py  test_query.py  test_s3_utils.py
convert_src/: lambda_fn.py  requirements.txt  test_lambda_fn.py
fetch_data/: fetcher.py  lambda.py  requirements.txt  s3_utils.py  test_fetcher.py
fetch_data/templates/: dump_fhir.jinja2
lambda/: lambda.py
lambda/templates/: fhir_count.sql.jinja2
lambda_src/: env.py  lambda.py  query.py  s3_utils.py  test_lambda_fn.py  test_query.py  test_s3_utils.py
lambda_src/templates/: fhir_query.sql.jinja2
test_data/episodeofcare/: episodeofcare.parquet
test_data/my_json_cohort/encounter/: Encounter.000.ndjson
test_data/my_json_cohort/patient/: Patient.000.ndjson
test_data/my_parquet_cohort/medicationrequest/: medicationrequest.parquet
test_data/my_parquet_cohort/patient/: patients.parquet
