[project]
name = "agent-fhir-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.39",
    "duckdb>=1.5.4",
    "flask>=3.1.3",
    "jinja2>=3.1.6",
    "moto>=5.2.2",
]

[dependency-groups]
dev = [
    "moto>=5.0.0",
    "pytest>=9.1.1",
    "pytest-env>=0.7.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = [
    # This stops imports from exploding when running tests
    'lambda_src/',
]

# Move the environment variables to this dedicated section
[tool.pytest_env]
LOCAL_ROOT = "./test_data/"